Fix linebreak whitespace from clipboard #37

--- a/content/skin/darwin.css
+++ b/content/skin/darwin.css
@@ -27,7 +27,8 @@
 #ssleuth-text-cert-issuer-org,
 #ssleuth-text-cert-issuer-org-unit,
 #ssleuth-text-cert-validity,
-#ssleuth-text-cert-fingerprint
+#ssleuth-text-cert-fingerprint-1,
+#ssleuth-text-cert-fingerprint-2
 		{
 	padding-left: 6px;
 }
